1.4
------
- Add support for strings api calls

1.3
------
- Add all sub-analyses api calls: code reuse, metadata, account related samples and find related samples
- Add download

1.2
------
- Add option to specify wait interval
- Errors are more informative now

1.1.1
------
 - Add support for python 3.8
 - Retry https connection errors

1.1
------
 - In Analysis: Refresh JWT access token in case of expiration

1.0
------
 - In Analysis: Change dynamic_unpacking and static_unpacking to disable_dynamic_unpacking and disable_static_unpacking