@@ -1,0 +1,135 @@
+import uuid
+from http import HTTPStatus
+
+import responses
+
+from intezer_sdk import errors
+from intezer_sdk.api import get_global_api
+from intezer_sdk.api import set_global_api
+from intezer_sdk.family import Family
+from intezer_sdk.family import search_family
+from tests.unit.base_test import BaseTest
+
+
+class FamilySpec(BaseTest):
+    def setUp(self):
+        super(FamilySpec, self).setUp()
+
+        with responses.RequestsMock() as mock:
+            mock.add('POST',
+                     url=self.full_url + '/get-access-token',
+                     status=200,
+                     json={'result': 'access-token'})
+            set_global_api()
+            get_global_api().set_session()
+
+    def test_access_to_family_name_fetches_the_data_from_cloud(self):
+        # Arrange
+        family_id = str(uuid.uuid4())
+        expected_name = 'Burla'
+        family = Family(family_id)
+
+        with responses.RequestsMock() as mock:
+            mock.add('GET',
+                     '{}/families/{}/info'.format(self.full_url, family_id),
+                     json={'result': {'family_id': family_id,
+                                      'family_name': expected_name,
+                                      'family_type': 'malware'}})
+            # Act
+            name = family.name
+
+        self.assertEqual(name, expected_name)
+
+    def test_access_to_family_name_fetches_the_data_from_cloud_only_once(self):
+        # Arrange
+        family_id = str(uuid.uuid4())
+        expected_name = 'Burla'
+        family = Family(family_id)
+
+        with responses.RequestsMock() as mock:
+            mock.add('GET',
+                     '{}/families/{}/info'.format(self.full_url, family_id),
+                     json={'result': {'family_id': family_id,
+                                      'family_name': expected_name,
+                                      'family_type': 'malware'}})
+            # Act
+            _ = family.name
+            name = family.name
+
+        self.assertEqual(name, expected_name)
+
+    def test_access_to_family_type_fetches_the_data_from_cloud(self):
+        # Arrange
+        family_id = str(uuid.uuid4())
+        expected_type = 'malware'
+        family = Family(family_id)
+
+        with responses.RequestsMock() as mock:
+            mock.add('GET',
+                     '{}/families/{}/info'.format(self.full_url, family_id),
+                     json={'result': {'family_id': family_id,
+                                      'family_name': 'Burla',
+                                      'family_type': expected_type}})
+            # Act
+            family_type = family.type
+
+        self.assertEqual(family_type, expected_type)
+
+    def test_access_to_family_type_fetches_the_data_from_cloud_only_once(self):
+        # Arrange
+        family_id = str(uuid.uuid4())
+        expected_type = 'malware'
+        family = Family(family_id)
+
+        with responses.RequestsMock() as mock:
+            mock.add('GET',
+                     '{}/families/{}/info'.format(self.full_url, family_id),
+                     json={'result': {'family_id': family_id,
+                                      'family_name': 'Burla',
+                                      'family_type': expected_type}})
+            # Act
+            _ = family.type
+            family_type = family.type
+
+        self.assertEqual(family_type, expected_type)
+
+    def test_fetch_family_raise_when_family_not_found(self):
+        # Arrange
+        family_id = str(uuid.uuid4())
+        family = Family(family_id)
+
+        with responses.RequestsMock() as mock:
+            mock.add('GET',
+                     '{}/families/{}/info'.format(self.full_url, family_id),
+                     status=HTTPStatus.NOT_FOUND)
+            # Act and assert
+            with self.assertRaises(errors.FamilyNotFoundError):
+                family.fetch_info()
+
+    def test_search_family_return_family(self):
+        # Arrange
+        family_id = str(uuid.uuid4())
+        family_name = 'Burla'
+
+        with responses.RequestsMock() as mock:
+            mock.add('GET',
+                     '{}/families'.format(self.full_url),
+                     json={'result': {'family_id': family_id, 'family_name': family_name}})
+
+            # Act
+            family = search_family(family_name)
+
+        # Assert
+        self.assertEqual(family.family_id, family_id)
+        self.assertEqual(family.name, family_name)
+
+    def test_search_family_return_none_when_family_not_found(self):
+        # Arrange
+        with responses.RequestsMock() as mock:
+            mock.add('GET', '{}/families'.format(self.full_url), status=HTTPStatus.NOT_FOUND)
+
+            # Act
+            family = search_family('Burla')
+
+        # Assert
+        self.assertIsNone(family)
